feat: 이름에 공백만 존재하는 경우 예외발생기능